<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="30sp"
        android:text="@string/product_search_heading" />

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="30sp"
        android:textColor="#000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="30sp"
        android:text="@string/product_info_heading" />

    <TextView
        android:id="@+id/tv_product_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="30sp"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/tv_loading_product_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="16dp"
        android:visibility="invisible"
        android:text="@string/loading_error_message" />

    <ProgressBar
        android:id="@+id/pb_product_indicator"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_margin="32dp"
        android:layout_gravity="top|center_horizontal"
        android:visibility="invisible"/>


</LinearLayout>